[package]
name = "minceraft"
description = "A library for minecraft related stuff"
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
net = ["dep:aes", "dep:byteorder", "dep:cfb8", "dep:flate2", "dep:hematite-nbt", "dep:uuid"]
auth = ["dep:byteorder", "dep:chrono", "dep:reqwest", "dep:serde_json", "dep:serde", "dep:serde_derive", "dep:base64"]

[dependencies]
anyhow = "1.0"

aes = { version = "0.7", optional = true }
byteorder = { version = "1.4", optional = true }
tokio-byteorder = { version = "0.3", optional = true }
cfb8 = { version = "0.7", optional = true }
flate2 = { version = "1.0", optional = true }
hematite-nbt = { version = "0.5", optional = true }
uuid = { version = "1.0", optional = true }

chrono = { version = "0.4", optional = true}
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
serde_json = { version = "1.0", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true }
serde_derive = {version = "1.0", optional = true}
base64 = {version = "0.13", optional = true}
tokio = {version = "1.9", optional = true}

[dev-dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde_json = "1.0"
ms_auth_mc = {path = "../ms_auth_mc"}
sha1 = "0.10"
rsa_public_encrypt_pkcs1 = "0.4"
rand = "0.8"

[[example]]
name = "login"
required-features = ["net", "auth"]

[[example]]
name = "status"
required-features = ["net", "auth"]