[package]
name = "minceraft-derive"
version = "0.2.0"
edition = "2021"
description = "derive macros for minceraft"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
anyhow = "1.0"
minceraft = { version = "0.2.1", features = ["net"] }